scss/root/_layout.scss
* {
  box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
}

.l-sidebar {
  width: 300px;
}

.l-sidebar__container {
  position: sticky;
  top: 82px;

  .toolbar-horizontal & {
    top: calc(39px + 82px + 2em);

    @at-root .toolbar-horizontal {

      &.toolbar-tray-open {

        .l-sidebar__container {
          top: calc(79px + 82px + 2em);
        }

      }

    }

  }

  .toolbar-vertical & {
    top: calc(39px + 82px + 2em);
  }

}

.l-content {
  flex: 1;
}

.l-banner {
  position: sticky;
  top: 0;
  z-index: 900;
  background-color: $white;

  .toolbar-horizontal & {
    top: 39px;

    @at-root .toolbar-horizontal {

      &.toolbar-tray-open {

        .l-banner {
          top: 79px;
        }

      }

    }

  }

  .toolbar-vertical & {
    top: 39px;
  }

}

// grid
// @TODO: Actually define and utilize the grid system presented in webflow.
.grid {
  display: flex;
  flex-wrap: wrap;
}

.grid--full {
  display: flex;
  position: relative;
  align-items: stretch;
  padding: 1em;
}

.col {
  padding: 1em;
}

.col-2 {
  width: 16.666666666666668%;
}

.col-3 {
  width: 25%;
}

.col-4 {
  width: 33.33%;
}

.col-8 {
  flex: 1;
  width: 66.66666666666667%;
}

